// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linked key 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._resolveMsg(\\"name\\")(ctx), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`linked list 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._resolveMsg(ctx._interpolate(ctx.list[0]))(ctx), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`linked modifier 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._resolveModifier(\\"upper\\")(ctx._resolveMsg(\\"name\\")(ctx)), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`linked named 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._resolveMsg(ctx._interpolate(ctx.named.name))(ctx), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`list basic 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._interpolate(ctx.list[0]), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`list multiple 1`] = `
"function __msg__ (ctx) {
  return [
    ctx._interpolate(ctx.list[0]), \\" \\", ctx._interpolate(ctx.list[1]), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`named basic 1`] = `
"function __msg__ (ctx) {
  return [
    \\"hi \\", ctx._interpolate(ctx.named.name), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`named multiple 1`] = `
"function __msg__ (ctx) {
  return [
    ctx._interpolate(ctx.named.greeting), \\" \\", ctx._interpolate(ctx.named.name), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`plural 1`] = `
"function __msg__ (ctx) {
  return [
    \\"no apples\\", \\"one apple\\", \\"too much apples  \\", \\"\\"
  ][ctx.plural.rule(ctx.plural.index, 3)]
}"
`;

exports[`text basic 1`] = `
"function __msg__ (ctx) {
  return \\"hello world\\"
}"
`;

exports[`text multline 1`] = `
"function __msg__ (ctx) {
  return \\"hello\\\\n world\\"
}"
`;
